--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
-    "mongoose": "^8.1.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.2",
+    "set-cookie-parser": "^2.6.0"
   }
 }
